# open_webui_stack

./: .gitignore  .gitmodules  README.md  docker-compose-prod.yaml  docker-compose.yaml  down_stack.sh  enable_letsencrypt.sh  pyproject.toml  start_stack.sh
compose_project/pipeline/: .env.compose  docker-compose.pipeline.yml  dockerfile.pipelines
compose_project/webui/: docker-compose.yml
compose_project/webui/searxng/: settings.yml
conf.d/: nginx.conf
litellm/: docker-compose.yaml  litellm-config.yaml
nginx/: docker-compose.yaml
nginx/conf.d/: nginx.conf
pipelines/: Dockerfile  docker-compose.yml  main.py  pyproject.toml  start.sh  test.ipynb  test.py
pipelines/venvs_library/: envs.toml
searxng/: docker-compose.yaml
