[tool.poetry]
name = "lina-webui"
version = "0.1.0"
description = ""
authors = ["MChrys <chrys.beltran@outlook.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Portkey = "^0.1.2"
portkey-ai = "^1.9.5"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
