[tool.poetry]
name = "pipelines"
version = "0.1.0"
description = ""
authors = ["htagourti <htagourti@linagora.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.111.0"
uvicorn = {version = "0.22.0", extras = ["standard"]}
pydantic = "2.7.1"
python-multipart = "0.0.9"
python-socketio = "^5.11.4"
grpcio = "^1.68.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = {extras = ["crypto"], version = "^2.10.0"}
requests = "2.32.2"
aiohttp = "3.9.5"
httpx = "^0.27.2"
openai = "^1.55.0"
anthropic = "^0.39.0"
google-generativeai = "^0.8.3"
vertexai = "^1.71.1"
pymongo = "^4.10.1"
peewee = "^3.17.8"
sqlalchemy = "^2.0.36"
boto3 = "^1.35.68"
redis = "^5.2.0"
sqlmodel = "^0.0.22"
chromadb = "^0.5.20"
psycopg2-binary = "^2.9.10"
langfuse = "^2.54.1"
ddtrace = "^2.17.0"
torch = "^2.5.1"
numpy = "^2.1.3"
pandas = "^2.2.3"
xgboost = "^2.1.2"
scikit-learn = "^1.5.2"
sentence-transformers = "^3.3.1"
transformers = "^4.46.3"
tokenizers = "^0.20.3"
nltk = "^3.9.1"
tiktoken = "^0.8.0"
pillow = "^11.0.0"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
selenium = "^4.26.1"
playwright = "^1.49.0"
beautifulsoup4 = "^4.12.3"
llama-index = "^0.12.1"
llama-index-llms-ollama = "^0.4.1"
prettyprint = "^0.1.5"
portkey-ai = "^1.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
